# proteome-exploration

./: .gitignore  Makefile  PROJECT_SPEC.md  README.md  nixpacks.toml  package.json  pyproject.toml
.codex/agents/: ingest_contract_worker.toml  manifest_worker.toml  projection_worker.toml  qa_reviewer.toml
.github/workflows/: ci.yml
apps/api/: package.json  railway.toml
apps/worker/: nixpacks.toml  package.json  railway.toml
configs/: project.yaml
configs/contexts/: immune_hematopoietic.yaml
configs/haplotypes/: hprc_phase1_subset.tsv
configs/scorers/: alphagenome.yaml  cheap_baseline.yaml  ntv2_embedding.yaml
configs/sources/: phase1_sources.template.yaml  phase1_sources.yaml
data/registry/: polymorphic_ccre_registry.csv  registry_manifest.json  replacement_candidates.csv  scorer_outputs.csv  validation_links.csv
docs/: assay_inventory.md  design_decisions.md  p5_p6_streaming_spec.md  project_vcf_streaming_spec.md  railway_deploy.md  real_data_onboarding.md  run_readiness.md  system_overview.md
docs/schemas/: README.md
scripts/: bootstrap_real_data.py  build_manifest.py  check_release_contract.py  prepare_engreitz_assay_source.py  release_phase1.py  run_phase1.py
skills/hotpath-profiler-lab/: SKILL.md
skills/incremental-pipeline-runner/: SKILL.md
skills/optimization-playbook/: SKILL.md
skills/performance-parity-gate/: SKILL.md
skills/pipeline-readiness-gate/: SKILL.md
skills/railway-capacity-rightsizer/: SKILL.md
skills/railway-devops/: SKILL.md
skills/worker-failure-triage/: SKILL.md
src/panccre/: __init__.py
(+99 files in other folders)
