[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panccre"
version = "0.1.0"
description = "Pangenome-aware regulatory element registry scaffolding"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "numpy>=1.26",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
parquet = [
    "pyarrow>=16.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
